# scouting-v3

./: Cargo.toml  Makefile  README.md
assets/: index.html  sw.js
events/: scriw-2023.toml
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
wasm/: Cargo.toml  build.rs
wasm/src/: main.rs
wasm/ui/: main.slint  scouting.slint  util.slint
