[package]
name = "scouting-v3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
hashbrown = "0.14.2"
notify-debouncer-mini = "0.4.1"
rust-embed = { version = "8.0.0", features = ["axum", "interpolate-folder-path"] }
scouting-v3 = { version = "0.1.0", path = ".." }
sled = "0.34.7"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.5"
